--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,33 @@
-alembic==1.7.6
+alembic==1.6.5
 blinker==1.4
-click==8.0.4
-dnspython==2.2.0
+click==8.0.1
+dnspython==2.1.0
 dominate==2.6.0
 email-validator==1.1.3
-Flask==2.0.3
+Flask==1.0.2
 Flask-Bootstrap==3.3.7.1
 Flask-Login==0.5.0
 Flask-Mail==0.9.1
-Flask-Migrate==2.6.0
+Flask-Migrate==2.0.0
 Flask-Script==2.0.6
+Flask-SimpleMDE==0.3.0
 Flask-SQLAlchemy==2.5.1
 Flask-Uploads==0.2.1
-Flask-WTF==1.0.0
-greenlet==1.1.2
+Flask-WTF==0.15.1
+greenlet==1.1.0
 gunicorn==20.1.0
-idna==3.3
-importlib-metadata==4.11.2
-importlib-resources==5.4.0
-itsdangerous==2.1.0
-Jinja2==3.0.3
-Mako==1.1.6
-MarkupSafe==2.1.0
-psycopg2==2.9.3
-SQLAlchemy==1.4.31
+idna==3.2
+itsdangerous==2.0.1
+Jinja2==3.0.1
+Mako==1.1.4
+markdown2==2.4.0
+MarkupSafe==2.0.1
+psycopg2-binary==2.8.6
+python-dateutil==2.8.1
+python-dotenv==0.17.1
+python-editor==1.0.4
+six==1.16.0
+SQLAlchemy==1.4.18
 visitor==0.1.3
-Werkzeug==2.0.3
-WTForms==3.0.1
-zipp==3.7.0
+Werkzeug==0.16.1
+WTForms==2.3.3
